# Learning-Rust

./: .gitignore  README.md
code/app0001_hello_world/: Cargo.toml
code/app0001_hello_world/src/: main.rs
code/app0002_variables/: Cargo.toml
code/app0002_variables/src/: main.rs
code/app0003_crate/: Cargo.toml
code/app0003_crate/src/: main.rs
code/app0004_mutable_vars/: Cargo.toml
code/app0004_mutable_vars/src/: main.rs
code/app0005_input_strings/: Cargo.toml
code/app0005_input_strings/src/: main.rs
code/app0006_functions/: Cargo.toml
code/app0006_functions/src/: main.rs
code/app0007_addition/: Cargo.toml
code/app0007_addition/src/: main.rs  utils.rs
code/app0008_concat/: Cargo.toml
code/app0008_concat/src/: main.rs
code/app0009_if_else/: Cargo.toml
code/app0009_if_else/src/: main.rs  utils.rs
code/app0010_comparisions/: Cargo.toml
code/app0010_comparisions/src/: main.rs
code/app0011_repeated_words/: Cargo.toml
code/app0011_repeated_words/src/: main.rs
code/app0012_largest/: Cargo.toml
code/app0013_json_over_http/: Cargo.toml
code/app0013_json_over_http/src/: main.rs
code/app0014_more_json/: Cargo.toml  output.txt
code/app0015_sum_evens/: Cargo.toml
code/app0016_array/: Cargo.toml
code/app0017_functions/: Cargo.toml
code/app0018_functions2/: Cargo.toml
code/app0019_function_multi_par/: Cargo.toml
code/app0020_function_return/: Cargo.toml
code/app0021/: Cargo.toml
code/minigrep/: file.txt
code/twitter_clone/: .env  Cargo.toml
code/web_server/: 404.html  index.html
code/yet_another_fizzbuzz/: Cargo.toml
(+10 files in other folders)
